# UFSC

./: 09.19.py  comparacao  elipticas.npy  hiperbolicas.npy  parabolicas.npy  pyproject.toml  representa_double_memoria.c
EMB5005/: functions.py  main.py
EMB5005/Octave/: funcoes.m  main.m
EMB5005/classifica_conica/: classifica_conica.py
EMB5016/: 3.1416  divisao.py  escalonamento.py  funcoes_teste.py  functions.py  gravarnumero.c  int_pol.py  lu.py  main.py  main_interpolacao.py  newton.py  representa_double_memoria.c  testar_com_input  teste.c  teste.py  testeee.c
EMB5016/1.tirarbolinhas/: tirar_bolinhas.py
EMB5016/2. Bissecao/: ex_bis.c  merge_sort.py  tabela.txt
EMB5016/Aulas praticas/1. Intro Python/: soma.py
EMB5016/Aulas praticas/modulos/: logs.py
EMB5016/Aulas teoricas/1. Aritmetica Float/: representa_double_memoria.c
EMB5016/Aulas teoricas/3. Ponto fixo/: exemplos.py
EMB5016/Lista 3/: lista_3.py
EMB5016/Pratica 2/: main.py
EMB5016/aulas_praticas/: logs.py  programa_principal.py
EMB5016/interpolacao_polinomial/: main_interpolacao.py
EMB5016/praticas/1/: coisa.py  (+1 more)
EMB5016/prog_c/: main.c
EMB5016/trabalho_conicas/: conicas_01.py  escalonamento.py  funcoes_teste.py  main.py  newton.py  teste_trabalho1.py  trabalho1.py
EMB5016/trabalho_orbitas/: elipticas.npy  orbitas_parabolicas.npy  parabolicas.npy  teste_trabalho2.py
Intro_Algo/c/: 1.1.c  1.2.c  1.P.c  1.P.c-o  2.1.c  2.2.c  2.3.c  algorithms.c  o.out
RSA/: solvedor_rsa.py
coisa pra larissa/: RSA.py  primos_pequenos.npy  solvedor_rsa.py
coursera/cs.fundamentals/: test.cpp
(+41 files in other folders)
